fixed projectimg alignment

--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@
 }
 
 .grid-container {
-  max-width: 900px;
+  max-width: 1000px;
   margin: 1rem;
   display: grid;
   grid-auto-columns: 1fr;
   gap: .5rem;
-  grid-template-areas: none;
+  grid-template-areas:
     "box1  box2  box3  box4  box4  box5  box5"
     "box6  box6  box7  box7  box7  box8  box9"
     "box10 box11 box7  box7  box7  box8  box9"
@@ -150,7 +150,7 @@ body {
 
 
 header, main, footer {
-    max-width: 1000px;
+    max-width: 1800px;
     margin: 0 auto;
     width: 100%;
 }
@@ -210,7 +210,6 @@ section {
 .imgContainer {
     width: 200px;
     height: 200px;
-    position: relative;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -276,9 +275,21 @@ section {
 
   .projectItem {
     display: flex;
-    align-items: stretch;
+    justify-content: space-between;
+    align-items: flex-start;
     gap: 24px;
+    margin: 0;
   }
+
+  .projectImg {
+    margin-left: auto;
+    width: 200px;
+    height: auto;
+    box-sizing: border-box;
+    margin-right: 0;
+  }
+
+
 
   .projectItem div:first-child {
     display: flex;
@@ -308,15 +319,25 @@ section {
     gap: 24px;
 }
 
+.linkContainer > a {
+  display: flex;
+  align-items: ;
+}
+
+.linkContainer>a>img {
+  margin-left: auto;
+}
+
 .linkItem {
     display: flex;
     flex-direction: row !important;
     align-items: center;
-    gap: 14px !important;
+    gap: 24px !important;
     color: var(--primary-color);
     text-decoration: none;
     cursor: pointer;
 }
+
 
 .linkItem:hover {
     opacity: 0.7;
@@ -327,6 +348,8 @@ section {
 }
 
 @media (max-width: 768px) {
+
+
   .grid-container {
     grid-template-areas:
       "box1  box2  box3  box6"
